...
    AppBarBackButton,
    AppBarTitle,
    BottomAppBarDiscard,
    BottomAppBarSave,
    LibrariesContainer,
    MicrophoneOverlaySizeOptions,
    MicrophoneFab,
    Indication,
    Overlay,

    AudioPlayingOptions,
    AudioOutputOptions,
    Endpoint,
...
    CrashlyticsEnabled,
    ShowLogEnabled,
    AudioFramesEnabled,

    DialogManagementOptions,

    DialogOk,
    DialogCancel,
    DialogUnsavedChanges,
    DialogChangelogButton,
    DialogChangelog,
    DialogDataPrivacyButton,
    DialogDataPrivacy,
    DialogLibrary,
    DialogServiceState,
    DialogCrashlytics,
    DialogMicrophonePermissionInfo,
    DialogOverlayPermissionInfo,
    DialogNotificationPermissionInfo,
    DialogSaveSettings,
    DialogRestoreSettings
}

fun Modifier.combinedTestTag(IOption: IOption<*>, tag: TestTag) = semantics(
...
